More progress, done with GO/CHEBI

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -494,7 +494,7 @@ inverse.roles.chebi=SELECT distinct ?relationship ?relationshipCode ?relationshi
 }  \
 ORDER BY ?relationship ?relatedConceptLabel
 
-inverse.roles.batch=SELECT distinct ?conceptCode ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
+inverse.roles.batch=SELECT DISTINCT ?conceptCode ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
 { GRAPH <#{namedGraph}> \
   { \
     { \
@@ -573,7 +573,7 @@ inverse.roles.batch=SELECT distinct ?conceptCode ?relationship ?relationshipCode
       ?z5 a owl:Restriction . \
       ?z5 owl:onProperty ?relationship . \
       OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
-      OPTIONAL ?relationship #{codeCode} ?relationshipCode } . \
+      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
       ?z5 owl:someValuesFrom ?y . \
       ?y a owl:Class . \
       ?y #{codeCode} ?conceptCode . \
@@ -679,8 +679,8 @@ inverse.roles.batch=SELECT distinct ?conceptCode ?relationship ?relationshipCode
       FILTER (?conceptCode IN (#{inClause})) . \
     } \
   } \
-} \
-ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
+}
+#ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
 
 inverse.roles.batch.chebi=SELECT distinct ?conceptCode ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
 { GRAPH <#{namedGraph}> \
@@ -716,7 +716,7 @@ roles=SELECT distinct ?relationship ?relationshipCode ?relationshipLabel ?relate
       ?z7 a owl:Restriction . \
       ?z7 owl:onProperty ?relationship . \
       OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
-      OPTIONAL { ?relationship #{codeCode} ?relationshipCode }. \
+      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
       ?z7 owl:someValuesFrom ?relatedConcept . \
       ?relatedConcept a owl:Class . \
       OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
@@ -970,7 +970,7 @@ roles.batch=SELECT distinct ?conceptCode ?relationship ?relationshipCode ?relati
       ?z5 a owl:Restriction . \
       ?z5 owl:onProperty ?relationship . \
       OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
-      OPTIONAL { ?relationship #{codeCode} ?relationshipCode }. \
+      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
       ?z5 owl:someValuesFrom ?relatedConcept . \
       ?relatedConcept a owl:Class . \
       OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
@@ -1021,7 +1021,7 @@ roles.batch=SELECT distinct ?conceptCode ?relationship ?relationshipCode ?relati
       ?z3 a owl:Restriction . \
       ?z3 owl:onProperty ?relationship . \
       OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
-      OPTIONAL { ?relationship #{codeCode} ?relationshipCode  . \
+      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
       ?z3 owl:someValuesFrom ?relatedConcept . \
       ?relatedConcept a owl:Class . \
       OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
@@ -1076,8 +1076,8 @@ roles.batch=SELECT distinct ?conceptCode ?relationship ?relationshipCode ?relati
       ?relatedConcept #{codeCode} ?relatedConceptCode . \
     } \
   } \
-} \
-ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
+}
+# ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
 
 roles.batch.chebi=SELECT distinct ?conceptCode ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
 { GRAPH <#{namedGraph}> \
@@ -1222,7 +1222,7 @@ all.associations=SELECT ?property ?propertyCode ?propertyLabel \
   { ?property a owl:AnnotationProperty . \
     OPTIONAL { ?property #{codeCode} ?propertyCode } . \
     OPTIONAL { ?property #{preferredNameCode} ?propertyLabel } \
-    ?property rdfs:range xml:anyURI  \
+    ?property rdfs:range xml:anyURI \
   } \
 }
 
@@ -1263,7 +1263,8 @@ all.concepts.without.code=SELECT ?concept ?conceptLabel \
     { \
         ?concept a owl:Class . \
         OPTIONAL { ?concept #{preferredNameCode} ?conceptLabel } . \
-        FILTER NOT EXISTS { ?concept #{codeCode} ?x } \
+        FILTER NOT EXISTS { ?concept #{codeCode} ?x } . \
+        FILTER (!isBNode(?concept)) \
     } \
 } \
 ORDER BY ?conceptCode 
