--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -240,8 +240,8 @@ associations=SELECT ?relationship ?relationshipLabel ?relatedConcept ?relatedCon
     ?relationship rdfs:range ?y_range \
   }\
   FILTER (str(?y_range)=\"http://www.w3.org/2001/XMLSchema#anyURI\") \
-} \
-ORDER BY ?relationship ?relatedConceptLabel
+}
+#ORDER BY ?relationship ?relatedConceptLabel
 
 #        ?relationship #{codeCode} ?relationshipCode . \
 associations.batch=SELECT ?conceptCode ?relationship ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
@@ -259,8 +259,8 @@ associations.batch=SELECT ?conceptCode ?relationship ?relationshipLabel ?related
     ?relationship rdfs:range ?y_range \
   } \
   FILTER (str(?y_range)="http://www.w3.org/2001/XMLSchema#anyURI") \
-} \
-ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
+}
+#ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
 
 #        ?relationship #{codeCode} ?relationshipCode . \
 inverse.associations=SELECT ?relationship ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
@@ -277,8 +277,8 @@ inverse.associations=SELECT ?relationship ?relationshipLabel ?relatedConcept ?re
     ?relationship rdfs:range ?y_range \
   } \
   FILTER (str(?y_range)=\"http://www.w3.org/2001/XMLSchema#anyURI\") \
-} \
-ORDER BY ?relationship ?relatedConceptLabel
+}
+#ORDER BY ?relationship ?relatedConceptLabel
 
 #         ?relationship #{codeCode} ?relationshipCode . \
 inverse.associations.batch=SELECT ?conceptCode ?relationship ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
@@ -296,8 +296,8 @@ inverse.associations.batch=SELECT ?conceptCode ?relationship ?relationshipLabel 
     ?relationship rdfs:range ?y_range \
   } \
   FILTER (str(?y_range)="http://www.w3.org/2001/XMLSchema#anyURI") \
-} \
-ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
+}
+#ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
 
 inverse.roles=SELECT distinct ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
 { GRAPH <#{namedGraph}> \
@@ -473,8 +473,8 @@ inverse.roles=SELECT distinct ?relationship ?relationshipCode ?relationshipLabel
       ?y #{codeCode} "#{conceptCode}" . \
       } \
     } \
-}  \
-ORDER BY ?relationship ?relatedConceptLabel
+}
+#ORDER BY ?relationship ?relatedConceptLabel
 
 inverse.roles.chebi=SELECT distinct ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
 { GRAPH <#{namedGraph}> \
@@ -491,8 +491,8 @@ inverse.roles.chebi=SELECT distinct ?relationship ?relationshipCode ?relationshi
     ?y a owl:Class . \
     ?y #{codeCode} "#{conceptCode}" . \
   } \
-}  \
-ORDER BY ?relationship ?relatedConceptLabel
+}
+#ORDER BY ?relationship ?relatedConceptLabel
 
 inverse.roles.batch=SELECT DISTINCT ?conceptCode ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
 { GRAPH <#{namedGraph}> \
@@ -696,8 +696,8 @@ inverse.roles.batch.chebi=SELECT distinct ?conceptCode ?relationship ?relationsh
     ?y #{codeCode} ?conceptCode . \
     FILTER (?conceptCode IN (#{inClause})) . \
   } \
-} \
-ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
+}
+#ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
 
 roles=SELECT distinct ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode  \
 { GRAPH <#{namedGraph}> \
@@ -873,8 +873,8 @@ roles=SELECT distinct ?relationship ?relationshipCode ?relationshipLabel ?relate
       ?relatedConcept #{codeCode} ?relatedConceptCode . \
     } \
   } \
-} \
-ORDER BY ?relationship ?relatedConceptLabel
+}
+#ORDER BY ?relationship ?relatedConceptLabel
 
 roles.chebi=SELECT distinct ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode  \
 { GRAPH <#{namedGraph}> \
@@ -889,8 +889,8 @@ roles.chebi=SELECT distinct ?relationship ?relationshipCode ?relationshipLabel ?
     OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
     ?relatedConcept #{codeCode} ?relatedConceptCode . \
   } \
-} \
-ORDER BY ?relationship ?relatedConceptLabel
+}
+#ORDER BY ?relationship ?relatedConceptLabel
 
 roles.batch=SELECT distinct ?conceptCode ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
 { GRAPH <#{namedGraph}> \
@@ -1093,8 +1093,8 @@ roles.batch.chebi=SELECT distinct ?conceptCode ?relationship ?relationshipCode ?
     OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
     ?relatedConcept #{codeCode} ?relatedConceptCode . \
   } \
-} \
-ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
+}
+#ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
 
 # relationship label is bound to "disjointWith"
 disjoint.with=SELECT ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
@@ -1119,8 +1119,8 @@ disjoint.with.batch=SELECT ?conceptCode ?relatedConcept ?relatedConceptCode ?rel
     OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
     OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } \
   } \
-} \
-ORDER BY ?conceptCode
+}
+#ORDER BY ?conceptCode
 
 # (1) owl:Class|rdfs:subClassOf|owl:Class
 # (2) owl:Class|owl:equivalentClass|owl:Class|owl:intersectionOf|owl:Class
@@ -1203,8 +1203,8 @@ all.qualifiers=SELECT DISTINCT ?property ?propertyCode ?propertyLabel \
     OPTIONAL { ?property #{codeCode} ?propertyCode } . \
     OPTIONAL { ?property #{preferredNameCode} ?propertyLabel } \
   } \
-} \
-ORDER BY ?propertyCode
+}
+#ORDER BY ?propertyCode
 
 all.properties.never.used=SELECT DISTINCT ?property ?propertyCode \
 { GRAPH <#{namedGraph}> \
@@ -1213,11 +1213,11 @@ all.properties.never.used=SELECT DISTINCT ?property ?propertyCode \
     OPTIONAL { ?property #{codeCode} ?propertyCode } . \
     FILTER NOT EXISTS { ?x ?property ?z } \
   } \
-} \
-ORDER BY ?propertyCode
+}
+#ORDER BY ?propertyCode
 
 # Annotation properties with URI range (to differentiate from properties)
-all.associations=SELECT ?property ?propertyCode ?propertyLabel \
+all.associations=SELECT DISTINCT ?property ?propertyCode ?propertyLabel \
 { GRAPH <#{namedGraph}> \
   { ?property a owl:AnnotationProperty . \
     OPTIONAL { ?property #{codeCode} ?propertyCode } . \
@@ -1226,7 +1226,7 @@ all.associations=SELECT ?property ?propertyCode ?propertyLabel \
   } \
 }
 
-all.roles=SELECT ?property ?propertyCode ?propertyLabel \
+all.roles=SELECT DISTINCT ?property ?propertyCode ?propertyLabel \
 { GRAPH <#{namedGraph}> \
   { ?property a owl:ObjectProperty . \
     OPTIONAL { ?property #{codeCode} ?propertyCode } . \
