Fix associations code lookup

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -1137,6 +1137,8 @@ hierarchy=SELECT ?parent ?parentCode ?parentLabel ?child ?childCode ?childLabel 
         ?parent a owl:Class . \
         OPTIONAL { ?parent #{preferredNameCode} ?parentLabel } . \
         OPTIONAL { ?parent #{codeCode} ?parentCode } \
+        FILTER (!isBNode(?parent)) \
+        FILTER (!isBNode(?child)) \
       } \
     } \
     UNION \
@@ -1152,6 +1154,8 @@ hierarchy=SELECT ?parent ?parentCode ?parentLabel ?child ?childCode ?childLabel 
         ?parent a owl:Class . \
         OPTIONAL { ?parent #{preferredNameCode} ?parentLabel } . \
         OPTIONAL { ?parent #{codeCode} ?parentCode } \
+        FILTER (!isBNode(?parent)) \
+        FILTER (!isBNode(?child)) \
       } \
     } \
     UNION \
@@ -1167,6 +1171,8 @@ hierarchy=SELECT ?parent ?parentCode ?parentLabel ?child ?childCode ?childLabel 
         ?parent a owl:Class . \
         OPTIONAL { ?parent #{preferredNameCode} ?parentLabel } . \
         OPTIONAL { ?parent #{codeCode} ?parentCode } \
+        FILTER (!isBNode(?parent)) \
+        FILTER (!isBNode(?child)) \
       } \
     } \
   } \
