Add missing preferredNameCode interpolation

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -1179,9 +1179,10 @@ hierarchy=SELECT ?parent ?parentCode ?parentLabel ?child ?childCode ?childLabel 
 }
 
 # Get all properties with literal values not URI values
-all.properties=SELECT ?property ?propertyCode ?propertyLabel \
+all.properties=SELECT DISTINCT ?property ?propertyCode ?propertyLabel \
 { GRAPH <#{namedGraph}> \
-  { ?property a owl:AnnotationProperty . \
+  { \
+    ?property a owl:AnnotationProperty . \
     OPTIONAL { ?property #{codeCode} ?propertyCode } . \
     OPTIONAL { ?property #{preferredNameCode} ?propertyLabel } . \
     FILTER NOT EXISTS { ?property rdfs:range xml:anyURI } \
