Fix reindex.sh to always check stale idnexes

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -1179,6 +1179,7 @@ hierarchy=SELECT ?parent ?parentCode ?parentLabel ?child ?childCode ?childLabel 
 }
 
 # Get all properties with literal values not URI values
+# limit to properties on owl:Class (can be expanded with UNION)
 all.properties=SELECT DISTINCT ?property ?propertyCode ?propertyLabel \
 { GRAPH <#{namedGraph}> \
   { \
@@ -1276,7 +1277,7 @@ all.concepts.without.code=SELECT ?concept ?conceptLabel \
 } \
 ORDER BY ?conceptCode 
 
-association.entries=SELECT ?concept ?conceptCode ?conceptLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
+association.entries=SELECT DISTINCT ?concept ?conceptCode ?conceptLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
 { GRAPH <#{namedGraph}> \
   { \
     ?concept a owl:Class . \
