More work on tuning roles

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -150,6 +150,29 @@ axioms.batch=SELECT ?conceptCode ?axiom ?axiomProperty ?axiomValue \
 } \
 ORDER BY ?axiom
 
+axioms.batch=SELECT ?conceptCode ?axiom ?axiomProperty ?axiomValue \
+{ GRAPH <#{namedGraph}> \
+  { \
+    { \
+      ?x a owl:Class . \
+      ?x #{codeCode} ?conceptCode . \
+      FILTER (?conceptCode IN (#{inClause})) . \
+      ?axiom a owl:Axiom . \
+      ?axiom owl:annotatedSource ?x . \
+      ?axiom ?axiomProperty ?axiomValue \
+    } \
+    UNION \
+    { \
+      ?x a owl:Class . \
+      FILTER (?x IN (#{aboutClause})) . \
+      ?axiom a owl:Axiom . \
+      ?axiom owl:annotatedSource ?x . \
+      ?axiom ?axiomProperty ?axiomValue \
+    } \
+  } \
+} \
+ORDER BY ?axiom
+
 children=SELECT ?child ?childLabel ?childCode \
 { GRAPH <#{namedGraph}> \
   { \
@@ -391,7 +414,7 @@ inverse.roles.batch.chebi=SELECT DISTINCT ?conceptCode ?relationship ?relationsh
     { \
       ?relatedConcept #{codeCode} ?relatedConceptCode . \
       OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
-      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
+      ?relatedConcept rdfs:subClassOf ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
       OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
@@ -498,7 +521,7 @@ roles.batch.chebi=SELECT DISTINCT ?conceptCode ?relationship ?relationshipCode ?
     { \
       ?concept #{codeCode} ?conceptCode . \
       FILTER (?conceptCode IN (#{inClause})) . \
-      ?concept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
+      ?concept rdfs:subClassOf ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
       OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
@@ -514,8 +537,9 @@ roles.all=SELECT DISTINCT ?conceptCode ?conceptLabel ?relationship ?relationship
 { GRAPH <#{namedGraph}> \
   { \
     { \
+      ?concept a owl:Class . \
       ?concept #{codeCode} ?conceptCode . \
-      OPTIONAL { ?relatedConcept #{preferredNameCode} ?conceptLabel } . \
+      OPTIONAL { ?concept #{preferredNameCode} ?conceptLabel } . \
       ?concept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
@@ -527,14 +551,72 @@ roles.all=SELECT DISTINCT ?conceptCode ?conceptLabel ?relationship ?relationship
       ?relatedConcept #{codeCode} ?relatedConceptCode . \
     } \
     UNION \
-    { ?concept #{codeCode} ?conceptCode . \
-      OPTIONAL { ?relatedConcept #{preferredNameCode} ?conceptLabel } . \
-      ?concept (owl:equivalentClass|rdfs:subClassOf)/
+    { \
+      ?concept a owl:Class . \
+      ?concept #{codeCode} ?conceptCode . \
+      OPTIONAL { ?concept #{preferredNameCode} ?conceptLabel } . \
+      ?concept (owl:equivalentClass|rdfs:subClassOf)/ \
         ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
           (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
           (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
           (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
         ) ?rs . \
+      ?rs a owl:Restriction . \
+      ?rs owl:onProperty ?relationship . \
+      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+      ?rs owl:someValuesFrom ?relatedConcept . \
+      ?relatedConcept a owl:Class . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      ?relatedConcept #{codeCode} ?relatedConceptCode . \
+    } \
+  } \
+}
+
+roles.all.chebi=SELECT DISTINCT ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?relationshipLabel ?relatedConceptCode ?relatedConceptLabel \
+{ GRAPH <#{namedGraph}> \
+  { \
+    { \
+      ?concept a owl:Class . \
+      ?concept #{codeCode} ?conceptCode . \
+      OPTIONAL { ?concept #{preferredNameCode} ?conceptLabel } . \
+      ?concept rdfs:subClassOf ?rs . \
+      ?rs a owl:Restriction . \
+      ?rs owl:onProperty ?relationship . \
+      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+      ?rs owl:someValuesFrom ?relatedConcept . \
+      ?relatedConcept a owl:Class . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      ?relatedConcept #{codeCode} ?relatedConceptCode . \
+    } \
+  } \
+}
+
+# 2 patterns seen in owl
+roles.all.go=SELECT DISTINCT ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?relationshipLabel ?relatedConceptCode ?relatedConceptLabel \
+{ GRAPH <#{namedGraph}> \
+  { \
+    { \
+      ?concept a owl:Class . \
+      ?concept #{codeCode} ?conceptCode . \
+      OPTIONAL { ?conceptLabel #{preferredNameCode} ?conceptLabel } . \
+      ?concept rdfs:subClassOf ?rs . \
+      ?rs a owl:Restriction . \
+      ?rs owl:onProperty ?relationship . \
+      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+      ?rs owl:someValuesFrom ?relatedConcept . \
+      ?relatedConcept a owl:Class . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      ?relatedConcept #{codeCode} ?relatedConceptCode . \
+    } \
+    UNION \
+    { \
+      ?concept a owl:Class . \
+      ?concept #{codeCode} ?conceptCode . \
+      OPTIONAL { ?concept #{preferredNameCode} ?conceptLabel } . \
+      ?concept owl:equivalentClass/owl:intersectionOf/rdf:rest*/rdf:first ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
       OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
