Minor query fixes

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -322,35 +322,38 @@ inverse.associations.batch=SELECT ?conceptCode ?relationship ?relationshipLabel 
 }
 #ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
 
-inverse.roles=SELECT DISTINCT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
+inverse.roles=SELECT DISTINCT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode  \
 { GRAPH <#{namedGraph}> \
   { \
-    { ?relatedConcept #{codeCode} ?relatedConceptCode . \
-      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
-      ?relatedConcept owl:equivalentClass ?z1 . \
-      ?relatedConcept (rdfs:subClassOf|owl:equivalentClass) ?y . \
-	  ?y (rdfs:subClassOf|owl:equivalentClass|owl:unionOf/rdf:rest*/rdf:first|owl:intersectionOf/rdf:rest*/rdf:first)+ ?rs . \
+    { ?relatedConcept #{codeCode} "#{conceptCode}" . \
+      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
       OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
       OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
-      ?rs owl:someValuesFrom ?concept . \
+      ?rs owl:someValuesFrom ?relatedConcept2 . \
       ?concept a owl:Class . \
-      ?concept #{codeCode} "#{conceptCode}" . \
+      OPTIONAL { ?concept #{preferredNameCode} ?conceptLabel } . \
+      ?concept #{codeCode} ?conceptCode . \
     } \
     UNION \
-    { ?relatedConcept #{codeCode} ?relatedConceptCode . \
-      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
-      ?relatedConcept rdfs:subClassOf ?rs . \
+    { ?relatedConcept #{codeCode} "#{conceptCode}" . \
+      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf)/ \
+        ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
+          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
+          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
+          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
+        ) ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
       OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
       OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
       ?rs owl:someValuesFrom ?concept . \
       ?concept a owl:Class . \
-      ?concept #{codeCode} "#{conceptCode}" . \
-      } \
+      OPTIONAL { ?concept #{preferredNameCode} ?conceptLabel } . \
+      ?concept #{codeCode} ?conceptCode . \
     } \
+  } \
 }
 
 inverse.roles.chebi=SELECT DISTINCT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
@@ -442,7 +445,7 @@ roles=SELECT DISTINCT ?relationship ?relationshipCode ?relationshipLabel ?relate
     } \
     UNION \
     { ?concept #{codeCode} "#{conceptCode}" . \
-      ?concept (owl:equivalentClass|rdfs:subClassOf)/
+      ?concept (owl:equivalentClass|rdfs:subClassOf)/ \
         ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
           (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
           (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
