Remove the 4-part clause for role queries as there is not any data

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -340,7 +340,6 @@ inverse.roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?related
         ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
           (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
           (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
-          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
         ) ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
@@ -354,6 +353,8 @@ inverse.roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?related
     } \
   } \
 }
+#           (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
+
 
 # ?concept and ?relatedConcept both must have a code
 inverse.roles.chebi=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
@@ -396,7 +397,6 @@ inverse.roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relatio
         ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
           (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
           (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
-          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
         ) ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
@@ -411,6 +411,7 @@ inverse.roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relatio
     } \
   } \
 }
+#           (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
 
 inverse.roles.batch.chebi=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
 { GRAPH <#{namedGraph}> \
@@ -450,7 +451,6 @@ roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept 
         ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
           (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
           (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
-          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
         ) ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
@@ -463,6 +463,7 @@ roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept 
     } \
   } \
 }
+#          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
 #ORDER BY ?relationship ?relatedConceptLabel
 
 # ?concept and ?relatedConcept both must have a code
@@ -508,7 +509,6 @@ roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipLab
         ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
           (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
           (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
-          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
         ) ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
@@ -521,6 +521,7 @@ roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipLab
     } \
   } \
 }
+#          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
 # ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
 
 # ?concept and ?relatedConcept both must have a code
@@ -564,7 +565,6 @@ roles.all=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?rel
         ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
           (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
           (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
-          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
         ) ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
@@ -579,7 +579,7 @@ roles.all=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?rel
     } \
   } \
 }
-
+#          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
 # ?concept and ?relatedConcept both must have a code
 roles.all.chebi=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
 { GRAPH <#{namedGraph}> \
