--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -336,10 +336,22 @@ inverse.roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?related
     } \
     UNION \
     { \
-      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf)/ \
+      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf)/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first ?rs . \
+      ?rs a owl:Restriction . \
+      ?rs owl:onProperty ?relationship . \
+      ?rs owl:someValuesFrom ?x_concept . \
+      ?x_concept a owl:Class . \
+      ?x_concept #{codeCode} "#{conceptCode}" . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      ?relatedConcept #{codeCode} ?relatedConceptCode . \
+      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+    } \
+    UNION \
+    { \
+      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf)/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/ \
         ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
-          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
-          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
+          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
         ) ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
@@ -378,7 +390,6 @@ inverse.roles.chebi=SELECT ?relationship ?relationshipCode ?relationshipLabel ?r
 inverse.roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
 { GRAPH <#{namedGraph}> \
   { \
-    { \
       ?relatedConcept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
@@ -390,45 +401,9 @@ inverse.roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relatio
       ?relatedConcept #{codeCode} ?relatedConceptCode . \
       OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
       OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
-    } \
-    UNION \
-    { \
-      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf)/ \
-        ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
-          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
-          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
-        ) ?rs . \
-      ?rs a owl:Restriction . \
-      ?rs owl:onProperty ?relationship . \
-      ?rs owl:someValuesFrom ?x_concept . \
-      ?x_concept a owl:Class . \
-      ?x_concept #{codeCode} ?conceptCode . \
-      FILTER (?conceptCode IN (#{inClause})) . \
-      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
-      ?relatedConcept #{codeCode} ?relatedConceptCode . \
-      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
-      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
-    } \
   } \
 }
 #           (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
-
-inverse.roles.batch.chebi=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
-{ GRAPH <#{namedGraph}> \
-    { \
-      ?relatedConcept rdfs:subClassOf ?rs . \
-      ?rs a owl:Restriction . \
-      ?rs owl:onProperty ?relationship . \
-      ?rs owl:someValuesFrom ?x_concept . \
-      ?x_concept a owl:Class . \
-      ?x_concept #{codeCode} ?conceptCode . \
-      FILTER (?conceptCode IN (#{inClause})) . \
-      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
-      ?relatedConcept #{codeCode} ?relatedConceptCode . \
-      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
-      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
-    } \
-}
 
 # ?concept and ?relatedConcept both must have a code
 roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode  \
@@ -447,10 +422,21 @@ roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept 
     } \
     UNION \
     { ?x_concept #{codeCode} "#{conceptCode}" . \
-      ?x_concept (owl:equivalentClass|rdfs:subClassOf)/ \
+      ?x_concept (owl:equivalentClass|rdfs:subClassOf)/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first ?rs . \
+      ?rs a owl:Restriction . \
+      ?rs owl:onProperty ?relationship . \
+      ?rs owl:someValuesFrom ?relatedConcept . \
+      ?relatedConcept a owl:Class . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      ?relatedConcept #{codeCode} ?relatedConceptCode . \
+      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+    } \
+    UNION \
+    { ?x_concept #{codeCode} "#{conceptCode}" . \
+      ?x_concept (owl:equivalentClass|rdfs:subClassOf)/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/ \
         ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
-          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
-          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
+          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
         ) ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
@@ -488,7 +474,6 @@ roles.chebi=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedCo
 roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
 { GRAPH <#{namedGraph}> \
   { \
-    { \
       ?x_concept #{codeCode} ?conceptCode . \
       FILTER (?conceptCode IN (#{inClause})) . \
       ?x_concept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
@@ -500,54 +485,35 @@ roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipLab
       ?relatedConcept #{codeCode} ?relatedConceptCode . \
       OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
       OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
-    } \
-    UNION \
-    { \
-      ?x_concept #{codeCode} ?conceptCode . \
-      FILTER (?conceptCode IN (#{inClause})) . \
-      ?x_concept (owl:equivalentClass|rdfs:subClassOf)/ \
-        ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
-          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
-          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
-        ) ?rs . \
-      ?rs a owl:Restriction . \
-      ?rs owl:onProperty ?relationship . \
-      ?rs owl:someValuesFrom ?relatedConcept . \
-      ?relatedConcept a owl:Class . \
-      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
-      ?relatedConcept #{codeCode} ?relatedConceptCode . \
-      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
-      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
-    } \
   } \
 }
 #          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
 # ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
 
 # ?concept and ?relatedConcept both must have a code
-roles.batch.chebi=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
-{ GRAPH <#{namedGraph}> \
-    { \
-      ?x_concept #{codeCode} ?conceptCode . \
-      FILTER (?conceptCode IN (#{inClause})) . \
-      ?x_concept rdfs:subClassOf ?rs . \
-      ?rs a owl:Restriction . \
-      ?rs owl:onProperty ?relationship . \
-      ?rs owl:someValuesFrom ?relatedConcept . \
-      ?relatedConcept a owl:Class . \
-      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
-      ?relatedConcept #{codeCode} ?relatedConceptCode . \
-      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
-      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
-    } \
-}
-
-# ?concept and ?relatedConcept both must have a code
 roles.all=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
 { GRAPH <#{namedGraph}> \
   { \
+    ?x_concept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
+    ?rs a owl:Restriction . \
+    ?rs owl:onProperty ?relationship . \
+    ?rs owl:someValuesFrom ?relatedConcept . \
+    ?relatedConcept a owl:Class . \
+    OPTIONAL { ?x_concept #{preferredNameCode} ?conceptLabel } . \
+    ?x_concept #{codeCode} ?conceptCode . \
+    OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+    ?relatedConcept #{codeCode} ?relatedConceptCode . \
+    OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+    OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+  } \
+}
+
+# ?concept and ?relatedConcept both must have a code
+roles.all.complex=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
+{ GRAPH <#{namedGraph}> \
+  { \
     { \
-      ?x_concept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
+      ?x_concept (owl:equivalentClass|rdfs:subClassOf)/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
       ?rs owl:someValuesFrom ?relatedConcept . \
@@ -561,10 +527,9 @@ roles.all=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?rel
     } \
     UNION \
     { \
-      ?x_concept (owl:equivalentClass|rdfs:subClassOf)/ \
+      ?x_concept (owl:equivalentClass|rdfs:subClassOf)/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
         ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
-          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
-          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
+          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
         ) ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
@@ -579,26 +544,8 @@ roles.all=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?rel
     } \
   } \
 }
-#          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
-# ?concept and ?relatedConcept both must have a code
-roles.all.chebi=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
-{ GRAPH <#{namedGraph}> \
-  { \
-    { \
-      ?x_concept rdfs:subClassOf ?rs . \
-      ?rs a owl:Restriction . \
-      ?rs owl:onProperty ?relationship . \
-      ?rs owl:someValuesFrom ?relatedConcept . \
-      ?relatedConcept a owl:Class . \
-      OPTIONAL { ?x_concept #{preferredNameCode} ?conceptLabel } . \
-      ?x_concept #{codeCode} ?conceptCode . \
-      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
-      ?relatedConcept #{codeCode} ?relatedConceptCode . \
-      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
-      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
-    } \
-  } \
-}
+
+roles.all.complex.chebi=SKIP
 
 # relationship label is bound to "disjointWith"
 disjoint.with=SELECT ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
