Finish work on looking up complex roles separately

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -323,6 +323,7 @@ inverse.roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?related
 { GRAPH <#{namedGraph}> \
   { \
     { \
+      ?relatedConcept a owl:Class . \
       ?relatedConcept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
@@ -336,6 +337,7 @@ inverse.roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?related
     } \
     UNION \
     { \
+      ?relatedConcept a owl:Class . \
       ?relatedConcept (owl:equivalentClass|rdfs:subClassOf)/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
@@ -349,6 +351,7 @@ inverse.roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?related
     } \
     UNION \
     { \
+      ?relatedConcept a owl:Class . \
       ?relatedConcept (owl:equivalentClass|rdfs:subClassOf)/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/ \
         ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
           (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
@@ -372,6 +375,7 @@ inverse.roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?related
 inverse.roles.chebi=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
 { GRAPH <#{namedGraph}> \
   { \
+    ?relatedConcept a owl:Class . \
     ?relatedConcept rdfs:subClassOf ?z1 . \
     ?z1 a owl:Restriction . \
     ?z1 owl:onProperty ?relationship . \
@@ -390,6 +394,7 @@ inverse.roles.chebi=SELECT ?relationship ?relationshipCode ?relationshipLabel ?r
 inverse.roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
 { GRAPH <#{namedGraph}> \
   { \
+      ?relatedConcept a owl:Class . \
       ?relatedConcept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
@@ -409,7 +414,9 @@ inverse.roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relatio
 roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode  \
 { GRAPH <#{namedGraph}> \
   { \
-    { ?x_concept #{codeCode} "#{conceptCode}" . \
+    { \
+      ?x_concept a owl:Class . \
+      ?x_concept #{codeCode} "#{conceptCode}" . \
       ?x_concept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
@@ -421,7 +428,9 @@ roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept 
       OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
     } \
     UNION \
-    { ?x_concept #{codeCode} "#{conceptCode}" . \
+    { \
+      ?x_concept a owl:Class . \
+      ?x_concept #{codeCode} "#{conceptCode}" . \
       ?x_concept (owl:equivalentClass|rdfs:subClassOf)/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
@@ -433,7 +442,9 @@ roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept 
       OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
     } \
     UNION \
-    { ?x_concept #{codeCode} "#{conceptCode}" . \
+    { \
+      ?x_concept a owl:Class . \
+      ?x_concept #{codeCode} "#{conceptCode}" . \
       ?x_concept (owl:equivalentClass|rdfs:subClassOf)/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/ \
         ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
           (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
@@ -456,6 +467,7 @@ roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept 
 roles.chebi=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode  \
 { GRAPH <#{namedGraph}> \
   { \
+    ?x_concept a owl:Class . \
     ?x_concept rdfs:subClassOf ?rs . \
     ?x_concept #{codeCode} "#{conceptCode}" . \
     ?rs a owl:Restriction . \
@@ -474,6 +486,7 @@ roles.chebi=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedCo
 roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
 { GRAPH <#{namedGraph}> \
   { \
+      ?x_concept a owl:Class . \
       ?x_concept #{codeCode} ?conceptCode . \
       FILTER (?conceptCode IN (#{inClause})) . \
       ?x_concept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
@@ -494,6 +507,7 @@ roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipLab
 roles.all=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
 { GRAPH <#{namedGraph}> \
   { \
+    ?x_concept a owl:Class . \
     ?x_concept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
     ?rs a owl:Restriction . \
     ?rs owl:onProperty ?relationship . \
@@ -513,6 +527,7 @@ roles.all.complex=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipC
 { GRAPH <#{namedGraph}> \
   { \
     { \
+      ?x_concept a owl:Class . \
       ?x_concept (owl:equivalentClass|rdfs:subClassOf)/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
@@ -527,7 +542,8 @@ roles.all.complex=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipC
     } \
     UNION \
     { \
-      ?x_concept (owl:equivalentClass|rdfs:subClassOf)/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
+      ?x_concept a owl:Class . \
+      ?x_concept (owl:equivalentClass|rdfs:subClassOf)/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/ \
         ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
           (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
         ) ?rs . \
