--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -250,7 +250,7 @@ associations=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedC
     ?relationship a owl:AnnotationProperty . \
     ?relatedConcept a owl:Class . \
     OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
-    ?relatedConcept #{codeCode} ?relatedConceptCode \
+    ?relatedConcept #{codeCode} ?relatedConceptCode . \
     OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
     OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
   } \
@@ -270,7 +270,7 @@ associations.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relation
     ?relationship a owl:AnnotationProperty . \
     ?relatedConcept a owl:Class . \
     OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
-    ?relatedConcept #{codeCode} ?relatedConceptCode \
+    ?relatedConcept #{codeCode} ?relatedConceptCode . \
     OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
     OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
   } \
@@ -278,6 +278,39 @@ associations.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relation
 #    ?relationship rdfs:range ?y_range \
 #  FILTER (str(?y_range)="http://www.w3.org/2001/XMLSchema#anyURI") \
 #ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
+
+associations.all=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
+{ GRAPH <#{namedGraph}> \
+  { \
+    ?x_concept a owl:Class . \
+    ?x_concept #{codeCode} ?conceptCode . \
+    OPTIONAL { ?x_concept #{preferredNameCode} ?conceptLabel } . \
+    ?x_concept ?relationship ?relatedConcept . \
+    ?relationship a owl:AnnotationProperty . \
+    ?relatedConcept a owl:Class . \
+    OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+    ?relatedConcept #{codeCode} ?relatedConceptCode . \
+    OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+    OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+  } \
+}
+
+# nothing optional for NCIt.
+associations.all.ncit=SELECT ?conceptCode ?conceptLabel ?relationshipCode ?relationshipLabel ?relatedConceptCode ?relatedConceptLabel \
+{ GRAPH <#{namedGraph}> \
+  { \
+    ?x_concept a owl:Class . \
+    ?x_concept #{codeCode} ?conceptCode . \
+    ?x_concept #{preferredNameCode} ?conceptLabel . \
+    ?x_concept ?relationship ?relatedConcept . \
+    ?relationship a owl:AnnotationProperty . \
+    ?relatedConcept a owl:Class . \
+    ?relatedConcept #{preferredNameCode} ?relatedConceptLabel . \
+    ?relatedConcept #{codeCode} ?relatedConceptCode . \
+    ?relationship #{preferredNameCode} ?relationshipLabel . \
+    ?relationship #{codeCode} ?relationshipCode . \
+  } \
+}
 
 # ?concept and ?relatedConcept both must have a code
 inverse.associations=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
